# fastapi-data-extractor

./: .dockerignore  .env.example  README.md  codebase_context.txt  generate_codebase_context.py  pyproject.toml  test_safe_storage.py
app/: config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: extraction.py
app/api/v1/modules/: __init__.py  articles.py  job_postings.py  kitchen.py
app/core/: content_scraper.py  extraction_engine.py  file_manager.py
app/core/storage/: __init__.py  base.py  factory.py  local_storage.py  s3_storage.py
app/models/: base.py  requests.py  responses.py
app/models/schemas/: __init__.py  bookmarks.py  books.py  insights.py  job_postings.py  notes.py  quotes.py  recipes.py
app/services/: extraction_service.py  schema_registry.py
app/utils/: exceptions.py
data/: url_7934ef97_markdown_9a29519a_20250621_080245.md  youtube_eUpzJs-k0Hg_markdown_e7df88f1_20250621_075835.md
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.yml
docker/scripts/: check.sh  clean.sh  dev.sh  logs.sh  prod.sh
