[project]
name = "fastapi-data-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.54.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "playwright>=1.49.0",
    "html2text>=2024.2.26",
    "logfire>=0.54.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "loguru>=0.7.2",
    "youtube-transcript-api>=1.1.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]
